--- a/busca.html
+++ b/busca.html
@@ -6,11 +6,16 @@
     <link rel="stylesheet" href="style.css">
     <title>busca</title>
 </head>
-<body>
+<body id="busca">
     <h1>busca</h1>
-    <hr>
-    <form action="">
-
+    <hr>    
+    <form action="method=">
+        <!--Barrinha de Busca-->
+        <label for="busca"></label>
+        <input type="search" id="buscar" name="busca">
+        <!---Botão da Lupa-->
+        <label for="botao"></label>
+        <button type="submit" id="lupa"><img src="lupa.png"></button>
     </form>
 </body>
 </html>
