CONSEGUI FAZER O SUBMIT

--- a/busca.html
+++ b/busca.html
@@ -15,7 +15,7 @@
         <input type="search" id="buscar" name="busca">
         <!---Botão da Lupa-->
         <label for="botao"></label>
-        <button type="submit" id="lupa"><img src="lupa.png"></button>
+        <button type="submit" id="lupa"></button>
     </form>
 </body>
 </html>
