--- a/busca.html
+++ b/busca.html
@@ -7,7 +7,7 @@
     <title>busca</title>
 </head>
 <body id="busca">
-    <h1>busca</h1>
+    <h1>Busca</h1>
     <hr>    
     <form action="method=">
         <!--Barrinha de Busca-->
