--- a/cad-pessoa.html
+++ b/cad-pessoa.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Cadastro de Pessoas</title>
+    <title>Cadastro</title>
 </head>
 <body id="cadastro">
-    <h1>Cadastro de Pessoas</h1>
+    <h1>Cadastro</h1>
     <hr>
     <form action="">
+        <!--Título-->
+        <h2>Cadastro</h2>
+        <hr>
         <!--Nome Completo-->
         <label for="nome-completo">Nome Completo:</label>
         <input type="text" id="nome-completo" name="nome-completo">
