--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <link rel="stylesheet" href="style.css">
     <title>formulários</title>
 </head>
-<body>
-    <h1>meus formulários</h1>
+<body id="pagina-inicial">
+    <h1>Meus Formulários</h1>
     <hr>
     <ul>
-        <li><a href="cad-pessoa.html">cadastro de pessoas</a></li>
-        <li><a href="busca.html">busca</a></li>
-        <li><a href="login.html">login</a></li>
-        <li><a href="filtro.html">filtro</a></li>
+        <li><a href="cad-pessoa.html">Cadastro</a></li>
+        <li><a href="busca.html">Busca</a></li>
+        <li><a href="login.html">Login</a></li>
+        <li><a href="filtro.html">Filtro</a></li>
     </ul>
     <script src="script.js"></script>
 </body>
