--- a/login.html
+++ b/login.html
@@ -4,13 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>login</title>
+    <title>Login</title>
 </head>
-<body>
-    <h1>login</h1>
+<body id="login">
+    <h1>Login</h1>
     <hr>
     <form action="">
-
+        <!--Título-->
+        <h2>Login</h2>
+        <hr>
+        <!--Nome-->
+        <label for="login">Nome:</label>
+        <input type="text" id="nome">
+        <!--Senha-->
+        <label for="password">Senha:</label>
+        <input type="password" id="senha">
+        <!--Enviar-->
+        <label for="login"></label>
+        <button type="submit" id="Login">Login</button>
+        <!--Esqueci a senha-->
+        <script src="script.js"></script>
+        <button onclick="enviarEmail()">Esqueci a senha</button>
     </form>
 </body>
 </html>
