--- a/busca.html
+++ b/busca.html
@@ -12,7 +12,7 @@
     <form action="method=">
         <!--Barrinha de Busca-->
         <label for="busca"></label>
-        <input type="search" id="buscar" name="busca">
+        <input type="search" id="buscar" name="busca" placeholder=" buscar...">
         <!---Botão da Lupa-->
         <label for="botao"></label>
         <button type="submit" id="lupa"></button>
