--- a/login.html
+++ b/login.html
@@ -15,16 +15,15 @@
         <hr>
         <!--Nome-->
         <label for="login">Nome:</label>
-        <input type="text" id="nome">
+        <input type="text" id="nome" required>
         <!--Senha-->
         <label for="password">Senha:</label>
-        <input type="password" id="senha">
+        <input type="password" id="senha" required>
         <!--Enviar-->
         <label for="login"></label>
         <button type="submit" id="Login">Login</button>
         <!--Esqueci a senha-->
-        <script src="script.js"></script>
-        <button onclick="enviarEmail()">Esqueci a senha</button>
+        <a href="redefinicao.html">Esqueci minha Senha</a>
     </form>
 </body>
 </html>
