--- a/cad-pessoa.html
+++ b/cad-pessoa.html
@@ -15,24 +15,24 @@
         <hr>
         <!--Nome Completo-->
         <label for="nome-completo">Nome Completo:</label>
-        <input type="text" id="nome-completo" name="nome-completo">
+        <input type="text" id="nome-completo" name="nome-completo" required>
         <!--Data de Nascimento-->
         <label for="nascimento">Data de Nascimento:</label>
-        <input type="date" id="nascimento" name="nascimento">
+        <input type="date" id="nascimento" name="nascimento" required>
         <!--E-mail-->
         <label for="email">E-mail:</label>
-        <input type="email" id="email" name="nascimento">
+        <input type="email" id="email" name="email" required>
         <!--Telefone-->
         <label for="telefone">Telefone:</label>
-        <input type="tel" id="telefone" name="telefone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
+        <input type="tel" id="telefone" name="telefone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required>
         <!--Endereço-->
         <label for="endereco">Endereço:</label>
-        <input type="text" id="endereco" name="endereco">
+        <input type="text" id="endereco" name="endereco" required>
         <!--Cidade-->
         <label for="cidade">Cidade:</label>
-        <input type="text" id="cidade" name="cidade">  
+        <input type="text" id="cidade" name="cidade" required>  
         <!--Estado-->
-        <label for="estado">Estado:</label>
+        <label for="estado">Estado:</label required>
         <select id="estado" name="estado">
             <option value="AC">Acre</option>
             <option value="AL">Alagoas</option>
