--- a/cad-pessoa.html
+++ b/cad-pessoa.html
@@ -24,7 +24,7 @@
         <input type="email" id="email" name="email" required>
         <!--Telefone-->
         <label for="telefone">Telefone:</label>
-        <input type="tel" id="telefone" name="telefone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required>
+        <input type="tel" id="telefone" name="telefone" required>
         <!--Endereço-->
         <label for="endereco">Endereço:</label>
         <input type="text" id="endereco" name="endereco" required>
